# OntoWikiGraph

./: .gitignore  README.md  pyproject.toml
docs/: README.md
docs/kg_workbench/: kg_build_pipeline.md
examples/kg_workbench/: manifest.json  manifest_tree_kg.yaml  single_file_tree_kg.md  single_file_tree_kg.yaml
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/kg/: README.md
frontend/src/: App.tsx  main.tsx  types.ts
frontend/src/components/: GraphCanvas.tsx  Inspector.tsx  Sidebar.tsx  Toolbar.tsx
frontend/src/data/: mockGraphs.ts
frontend/src/lib/: graphUtils.ts  loadGraphs.ts
frontend/src/styles/: index.css
kg_workbench/: README.md  __init__.py  build.py  config.py  frontend_data.py  models.py  pipeline.py  utils.py
kg_workbench/extractors/: __init__.py  heuristic.py  llm.py  structural.py
kg_workbench/llm/: __init__.py  base.py  openai_compatible.py
kg_workbench/normalization/: __init__.py  cluster.py
kg_workbench/ontology/: __init__.py  schema.py  validator.py
kg_workbench/readers/: __init__.py  json_manifest_reader.py  markdown_reader.py
kg_workbench/storage/: __init__.py  exporter.py  kuzu_store.py
kg_workbench/tree/: __init__.py  chunker.py  constructor.py  markdown.py
skills/doc-sync-and-push-main/: SKILL.md
skills/doc-sync-and-push-main/agents/: openai.yaml
tests/kg_workbench/: conftest.py  test_config.py  test_llm_extractor.py  test_ontology_and_export.py  test_readers_and_tree.py
